WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2007-01-06


Version 0.2.3 (under dev!):
   * fixed bugs with charset: now decodes/encodes nicks and channels in IRC
     messages (bug #18716)

Version 0.2.2 (2007-01-06):
   * fixed bug with status bar (missing refresh) when closing a buffer
   * fixed bug with use of first buffer for a channel if not connected
     to server (now allowed only for a server buffer)
   * fixed refresh bug with private buffer title
   * fixed bug with nick completion in command args (now uses option
     look_nick_completion_ignore)
   * fixed display bug with color for first line on screen (bug #17719)
   * added anti-flood option (irc_anti_flood) (task #5442)
   * fixed bug with "set_config" function in plugins API (bug #18448)
   * plugins: "add_message_handler" now accepts "*" for all IRC messages
   * added keys (F9/F10) to scroll topic (task #6030)
   * added auto completion with channels and filenames (task #5423)
   * fixed memleak in keyboard input
   * fixed refresh bug when changing config options if window is splited
   * added space between chat and nicklist when position is "right" (bug #17852)
   * added option "look_nicklist_separator" (task #5437)
   * fixed bug with DCC SEND when filename begins with '~'
   * added "irc_send_unknown_commands" option to send unknown commands to
     IRC server (OFF by default) (task #5947)
   * /charset command and charset conversions now made by "charset" plugin
   * fixed display bug in status bar, wrong length when using UTF-8
   * fixed bug with ignore: now any IRC command is allowed
   * fixed crash with Ctrl-T (transpose) and one char on line (bug #18153)
   * added filename completion (task #5425)
   * added "modifier" in plugins API
   * improved /plugin command
   * fixed bug on ignore with "mode" IRC command (bug #18058)
   * fixed crash when loading ruby script if file does not exist, with